--- a/dashboard.html
+++ b/dashboard.html
@@ -2,11 +2,13 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css" />
         <style>
             #tempGauge{
                 width: 100%;
                 border: 20px solid white;
             }
+            
         </style>
         <script src="
             https://cdn.jsdelivr.net/npm/canvas-gauges@2.1.7/gauge.min.js
@@ -105,5 +107,10 @@
     <body onLoad="drawGauge();setup();resize()">        
         <h1>Core Pico Temperature</h1>
         <canvas id="tempGauge"></canvas>
+        <label for="terms">
+            <input type="checkbox" role="switch" id="terms" name="terms" />
+            I agree to the
+            <a href="#" onclick="event.preventDefault()">Privacy Policy</a>
+          </label>
     </body>
 </html>
