--- a/dashboard.html
+++ b/dashboard.html
@@ -46,18 +46,6 @@
                     grid-column: auto / span 2;
                 }
             }
-
-            .features>div:first-child {
-                /* background-color: #0a79b3; */
-            }
-
-            .features>div:nth-child(2) {
-                /* background-color: #00FF00; */
-            }
-
-            .features>div:last-child {
-                /* background-color: #7D572B; */
-            }
         </style>
         <script src="https://cdn.jsdelivr.net/npm/canvas-gauges@2.1.7/gauge.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
@@ -89,7 +77,7 @@
             };
             window.addEventListener('resize', resize, false);
             function getTemperature() {
-                fetch('http://192.168.50.212/temp.json')
+                fetch('http://192.168.50.212/temp')
                     .then(res => res.json())
                     .then(json => {
                         console.log(json);
@@ -99,7 +87,7 @@
             };
             function setTimeIntervalGauge() {
                 const getTemperature = () => {
-                    fetch('http://192.168.50.212/temp.json')
+                    fetch('http://192.168.50.212/temp')
                         .then(res => res.json())
                         .then(json => {
                             console.log(json);
@@ -113,7 +101,7 @@
 
             function setTimeIntervalHistory() {
                 const getTemperatureHistory = () => {
-                    fetch('http://192.168.50.212/readlog/2023-10-12/get.json')
+                    fetch('http://192.168.50.212/readlog/2023-10-12')
                         .then(res => res.json())
                         .then(json => {
                             console.log(json);
@@ -183,7 +171,7 @@
             };
             function setLEDstate(){
                 var checkbox = document.getElementById('LED');
-                fetch('http://192.168.50.212/led.json')
+                fetch('http://192.168.50.212/led')
                     .then(res => res.json())
                     .then(json => {
                         console.log(json);
@@ -194,11 +182,11 @@
             function checkState(){
                 var checkbox = document.getElementById('LED');
                 if (checkbox.checked == true){
-                    fetch('http://192.168.50.212/led/1.json')
+                    fetch('http://192.168.50.212/led/1')
                     .catch(err => console.error(err));
                 }
                 else{
-                    fetch('http://192.168.50.212/led/0.json')
+                    fetch('http://192.168.50.212/led/0')
                     .catch(err => console.error(err));
                 }
             };
